--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "ember-load-initializers": "0.5.1",
     "ember-resolver": "2.0.3",
     "ember-wordpress": "0.1.1",
-    "fastboot-app-server": "rogatty/fastboot-app-server#0d52898d153d085753816652831a09056934497b",
+    "fastboot-app-server": "rogatty/fastboot-app-server",
     "fastboot-redis-cache": "0.1.0",
     "loader.js": "4.0.1"
   }
